objects/Contact.object
<CustomObject>
    <fields>
        <fullName>AW_Tenure__c</fullName>
        <description>This indicates Tenure period</description>
        <label>Tenure</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_ThirdName__c</fullName>
        <description>This indicates third name of the contact</description>
        <label>Third Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_Username__c</fullName>
        <description>This field is created to override the pre-chat form in chat bot.</description>
        <label>Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_WhatsApp__c</fullName>
        <description>This contains the Link to start chatting with contact via WhatsApp in another browser tab.</description>
        <formula>IF( ISBLANK(MobilePhone) , &quot;Add mobile number to start chatting&quot;, HYPERLINK(&quot;https://wa.me/&quot;&amp;MobilePhone, &quot;Chat on&quot; &amp; IMAGE(&quot;/resource/AW_WhatsappLogo&quot;,&apos;WhatsApp&apos;,30,30), &quot;_self&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The mobile number format must have the country code e.g. 27765065590</inlineHelpText>
        <label>WhatsApp</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_AQCCode__c</fullName>
        <description>Used in the SRS integration to populate the AQC Code for the Adviser</description>
        <label>AQC Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_AlternativeBusinessEmail__c</fullName>
        <description>Used for integration to populate individual client&apos;s Email from source systems where usage = Alternative Business</description>
        <label>Alternative Business Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CMN_AlternativeBusinessMobile__c</fullName>
        <description>Used for integration to populate individual client&apos;s Mobile Number from source systems where facility = Cell and usage =  Alternative Business</description>
        <label>Alternative Business Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CMN_AlternativeFax__c</fullName>
        <description>Used for integration to populate individual client&apos;s fax from source systems where usage = Alternative Private</description>
        <label>Alternative Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CMN_AlternativeMobile__c</fullName>
        <description>Used for integration to populate individual client&apos;s Mobile Number from source systems where facility = Cell and usage =  Alternative Private</description>
        <label>Alternative Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CMN_AlternativePhone__c</fullName>
        <description>Used for integration to populate individual client&apos;s Phone Number from source systems where facility = Landline and usage =  Alternative Private</description>
        <label>Alternative Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CMN_AlternativeWorkPhone__c</fullName>
        <description>Used for integration to populate individual client&apos;s Phone Number from source systems where facility = Landline and usage =  Alternative Business</description>
        <label>Alternative Work Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CMN_AssistantEmail__c</fullName>
        <description>Used in the SRS integration to populate the Adviser&apos;s Assistant Email</description>
        <label>Assistant Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CMN_BirthPlace__c</fullName>
        <description>Used for integration to populate client&apos;s Place of Birth from source systems.</description>
        <label>Place of Birth</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_BusinessEmail__c</fullName>
        <description>Used for integration to populate individual client&apos;s Email from source systems with usage = Business</description>
        <label>Business Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CMN_BusinessMobile__c</fullName>
        <description>Used for integration to populate individual client&apos;s Mobile Number from source systems where facility = Cell and usage =  Business</description>
        <label>Business Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CMN_ContactDOBSearch__c</fullName>
        <description>Used to search for Date Of Birth on Contacts .Not visible on page layout.</description>
        <label>Date Of Birth</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_ContractedStartDate__c</fullName>
        <description>Used in the SRS integration to populate the Contracted Start Date for the Adviser</description>
        <label>Contracted Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMN_CountryOfCitizenship__c</fullName>
        <description>Used for integration to populate client&apos;s Country of Citizenship from source systems</description>
        <label>Country of Citizenship</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_CountryOfResidence__c</fullName>
        <description>Used for integration to populate client&apos;s Country of Residence from source systems.</description>
        <label>Country of Residence</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_DateOfDeath__c</fullName>
        <description>Used for integration to populate client&apos;s Date of Death from source systems.</description>
        <label>Date of Death</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMN_DateOfDivorce__c</fullName>
        <description>Used for integration to populate client&apos;s Date of Divorce from source systems.</description>
        <label>Date of Divorce</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMN_IncomeType__c</fullName>
        <description>Used for integration to populate client&apos;s Income Type from source systems.</description>
        <label>Income Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Income from Employment</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Income from a directorship</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Income from a pension</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Income from commission</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Income from Membership of a close corporation</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMN_Income_Category__c</fullName>
        <description>Used for integration to populate client&apos;s Income Category from source systems.</description>
        <label>Income Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>R0 - R3500</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>R3501 - R5500</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>R5501 - R7500</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>R7501 - R10000</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>R10001 - R15000</label>
                </value>
                <value>
                    <fullName>6</fullName>
                    <label>&gt; R15000</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMN_Initials__c</fullName>
        <description>Used for integration to populate client Initials from source systems.</description>
        <label>Initials</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_Instagram__c</fullName>
        <description>Used to populate client&apos;s Instagram profile.</description>
        <label>Instagram</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CMN_OccupationIndustry__c</fullName>
        <description>Used for integration to populate client&apos;s Occupation Industry from source systems.</description>
        <label>Occupation Industry</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>1</fullName>
                    <label>Advertising And Publishing</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Agricultural Industry</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Arts</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Automotive Industry</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Banking</label>
                </value>
                <value>
                    <fullName>6</fullName>
                    <label>Beauty And Cosmetic Industry</label>
                </value>
                <value>
                    <fullName>7</fullName>
                    <label>Building Construction Industry</label>
                </value>
                <value>
                    <fullName>8</fullName>
                    <label>Clothing, Textiles, Footwear</label>
                </value>
                <value>
                    <fullName>9</fullName>
                    <label>Design</label>
                </value>
                <value>
                    <fullName>10</fullName>
                    <label>Education And Training</label>
                </value>
                <value>
                    <fullName>11</fullName>
                    <label>Electricity Industry</label>
                </value>
                <value>
                    <fullName>12</fullName>
                    <label>Energy Sector</label>
                </value>
                <value>
                    <fullName>13</fullName>
                    <label>Engineering Sector</label>
                </value>
                <value>
                    <fullName>14</fullName>
                    <label>Entertainment Industry</label>
                </value>
                <value>
                    <fullName>15</fullName>
                    <label>Fashion Industry</label>
                </value>
                <value>
                    <fullName>16</fullName>
                    <label>Film Industry</label>
                </value>
                <value>
                    <fullName>17</fullName>
                    <label>Financial Services</label>
                </value>
                <value>
                    <fullName>18</fullName>
                    <label>Food And Beverages Manufacturing Industry</label>
                </value>
                <value>
                    <fullName>19</fullName>
                    <label>Forestry Sector</label>
                </value>
                <value>
                    <fullName>61</fullName>
                    <label>Gambling</label>
                </value>
                <value>
                    <fullName>20</fullName>
                    <label>Government Sector International</label>
                </value>
                <value>
                    <fullName>21</fullName>
                    <label>Government Sector Local</label>
                </value>
                <value>
                    <fullName>22</fullName>
                    <label>Health And Fitness Industry</label>
                </value>
                <value>
                    <fullName>23</fullName>
                    <label>Healthcare/Medical Industry</label>
                </value>
                <value>
                    <fullName>24</fullName>
                    <label>Horticulture</label>
                </value>
                <value>
                    <fullName>25</fullName>
                    <label>Hospitality</label>
                </value>
                <value>
                    <fullName>26</fullName>
                    <label>Information Technology</label>
                </value>
                <value>
                    <fullName>27</fullName>
                    <label>Insurance</label>
                </value>
                <value>
                    <fullName>59</fullName>
                    <label>Legal Option Industry</label>
                </value>
                <value>
                    <fullName>28</fullName>
                    <label>Manufacturing</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMN_OccupationRiskCategory__c</fullName>
        <description>Used for integration to populate client&apos;s Occupation Risk Category from source systems.</description>
        <label>Occupation Risk Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Professional, Executive, Management, Administative &amp; Clerical (No accident/health risk, minimal &quot;sensitivity&quot;)</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Professional &amp; Qualified Occupations, mainly adminstrative (Slight accident/health risk, limited &quot;sensitivity&quot;)</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Master Craftsmen &amp; Master Tradesmen, management &amp; supervision only (Slight accident/health risk, with increased &quot;sensitivity&quot;)</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Skilled operatives, enviroment slightly more hazardous than cat 3 (Moderate accident/health risk and/or moderate &quot;sensitivity&quot;)</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Skilled &amp; Semi-Skilled operatives, with greater manual involvement (Higher accident/health risk, appreciable degree of &quot;sensitivity&quot;)</label>
                </value>
                <value>
                    <fullName>6</fullName>
                    <label>Skilled &amp; Semi-Skilled operatives, heavy manual work, extra hazards (Extra accident/health risk)</label>
                </value>
                <value>
                    <fullName>7</fullName>
                    <label>Specialised occupation, highly specialised physical or artistic talent but not hazardous in any way</label>
                </value>
                <value>
                    <fullName>No-match</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMN_PartyType__c</fullName>
        <description>Used in the SRS integration to populate the Party Type for the Adviser</description>
        <label>Party Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_PostalCareOf__c</fullName>
        <description>Used for integration to populate client&apos;s Postal Care Of information from source systems.</description>
        <label>Care Of</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_ResidentialCareOf__c</fullName>
        <description>Used for integration to populate client&apos;s Residential Care Of information from source systems.</description>
        <label>Care Of</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_SRSPartyID__c</fullName>
        <description>Used in the SRS integration to populate the Party ID for the Adviser</description>
        <label>SRS Party ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CMN_SalesCategory__c</fullName>
        <description>Used in the SRS integration to populate the Sales Category for the Adviser</description>
        <label>Sales Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_SourceOfFunds__c</fullName>
        <description>Used for integration to populate client&apos;s Source of Funds from source systems.</description>
        <label>Source of Funds</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>9</fullName>
                    <label>Distribution from a Partnership</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Dividents</label>
                </value>
                <value>
                    <fullName>1</fullName>
                    <label>Employment</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Interest</label>
                </value>
                <value>
                    <fullName>11</fullName>
                    <label>Maturity Value</label>
                </value>
                <value>
                    <fullName>8</fullName>
                    <label>Other Grants</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Pensions &amp; Annuities</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Real Property Income such as Rent</label>
                </value>
                <value>
                    <fullName>6</fullName>
                    <label>Royalties</label>
                </value>
                <value>
                    <fullName>7</fullName>
                    <label>Scholarship</label>
                </value>
                <value>
                    <fullName>10</fullName>
                    <label>Stokvel</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMN_SourceOfWealth__c</fullName>
        <description>Used for integration to populate client&apos;s Source of Wealth from source systems.</description>
        <label>Source of Wealth</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>4</fullName>
                    <label>Company Sale</label>
                </value>
                <value>
                    <fullName>10</fullName>
                    <label>Distributable net income of estate</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Divorce Settlement</label>
                </value>
                <value>
                    <fullName>8</fullName>
                    <label>Gambling</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Inheritance</label>
                </value>
                <value>
                    <fullName>7</fullName>
                    <label>Lottery</label>
                </value>
                <value>
                    <fullName>9</fullName>
                    <label>Not Applicable</label>
                </value>
                <value>
                    <fullName>1</fullName>
                    <label>Property Sale</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Sale of Investment</label>
                </value>
                <value>
                    <fullName>6</fullName>
                    <label>Savings</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMN_TaxPayingIndicator__c</fullName>
        <description>Used for integration to indicate client&apos;s Tax Paying status from source systems.</description>
        <label>Tax Paying</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMN_TitleStartDate__c</fullName>
        <description>Used in the SRS integration to populate the Title Start Date for the Adviser</description>
        <label>Title Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMN_WorkPhone__c</fullName>
        <description>Used for integration to populate individual client&apos;s Phone Number from source systems where facility = Landline and usage =  Business</description>
        <label>Work Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>FinServ__Affiliations__c</fullName>
        <label>Affiliations</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FinServ__AgeAsText__c</fullName>
        <formula>IF(
    ISBLANK(Birthdate),
    
    &apos;&apos;,

    IF(
        And(
            Month(Today()) &gt;= Month(Birthdate),
            Day(Today()) &gt;=  Day(Birthdate)
        ),

        TEXT(Year(Today())- Year(Birthdate)) &amp; &quot; &quot; &amp; &quot;years&quot; &amp; &quot; &quot; &amp; TEXT(Month(Today())-Month(Birthdate)) &amp; &quot; &quot; &amp; &quot;months&quot; &amp; &quot; &quot; &amp; TEXT(Day(Today())-Day(Birthdate)),
    
        IF(
            And(month(Today())&lt; month(Birthdate), Day(Today())&gt;= Day(Birthdate)),
        
            TEXT(Year(Today())-Year(Birthdate)-1) &amp; &quot; &quot; &amp; &quot;years&quot; &amp; &quot; &quot; &amp; TEXT(12 - Month(Birthdate)+month(Today())) &amp; &quot; &quot; &amp; &quot;months&quot; &amp; &quot; &quot; &amp; TEXT(Day(Today())-Day(Birthdate)),
    
            if(
                And( month(Today())&lt; month(Birthdate), Day(Today())&lt; Day(Birthdate)),

                (TEXT( (Year(Today())-Year(Birthdate)-1)) &amp; &quot; &quot; &amp; &quot;years&quot; &amp; &quot; &quot; &amp; TEXT((12 - Month(Birthdate)+month(Today())-1)) &amp; &quot; &quot; &amp; &quot;months&quot; ) &amp; &quot; &quot; &amp;
                    CASE(month(Birthdate),
                        2, TEXT( (28 - Day(Birthdate))+ Day(Today())),
                        4, TEXT( (30 - Day(Birthdate))+ Day(Today())),
                        6, TEXT( (30 - Day(Birthdate))+ Day(Today())),
                        9, TEXT( (30 - Day(Birthdate))+ Day(Today())),
                        11, TEXT( (30 - Day(Birthdate))+ Day(Today())),
                        TEXT( (31 - Day(Birthdate))+ Day(Today()))
                    ),
                if(
                    And( month(Today())= month(Birthdate), Day(Today())&lt; Day(Birthdate)),
                
                    (TEXT(Year(Today())- Year(Birthdate)-1)) &amp; &quot; &quot; &amp; &quot;years&quot; &amp; &quot; &quot; &amp; &quot;11&quot; &amp; &quot; &quot; &amp; &quot;months&quot; &amp; &quot; &quot; &amp;
                    CASE(month(Birthdate),
                        2, TEXT( (28 - Day(Birthdate))+ Day(Today())),
                        4, TEXT( (30 - Day(Birthdate))+ Day(Today())),
                        6, TEXT( (30 - Day(Birthdate))+ Day(Today())),
                        9, TEXT( (30 - Day(Birthdate))+ Day(Today())),
                        11, TEXT( (30 - Day(Birthdate))+ Day(Today())),
                        TEXT( (31 - Day(Birthdate))+ Day(Today()))
                    ),
                    (TEXT(Year(Today())- Year(Birthdate))) &amp; &quot; &quot; &amp; &quot;years&quot; &amp; &quot; &quot; &amp; TEXT(Month(Today())-Month(Birthdate)-1) &amp; &quot; &quot; &amp; &quot;months&quot; &amp; &quot; &quot; &amp;
                    CASE(month(Birthdate),
                        2, TEXT( (28 - Day(Birthdate))+ Day(Today())),
                        4, TEXT( (30 - Day(Birthdate))+ Day(Today())),
                        6, TEXT( (30 - Day(Birthdate))+ Day(Today())),
                        9, TEXT( (30 - Day(Birthdate))+ Day(Today())),
                        11, TEXT( (30 - Day(Birthdate))+ Day(Today())),
                        TEXT( (31 - Day(Birthdate))+ Day(Today()))
                    )
                )
            )
        )
    ) &amp; &quot; &quot; &amp; &quot;days&quot;
)</formula>
        <label>Age As Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__Age__c</fullName>
        <formula>if(And(Month(Today())&gt;= month(Birthdate), Day(Today()) &gt;=  Day(Birthdate)),
Year(Today())- Year(Birthdate) +
(Month(Today())-Month(Birthdate))/12,
if(And(month(Today())&lt; month(Birthdate), Day(Today())&gt;= Day(Birthdate)),
Year(Today())-Year(Birthdate)-1 +
(12 - Month(Birthdate)+month(Today()))/12,
if(And( month(Today())&lt; month(Birthdate), Day(Today())&lt; Day(Birthdate)),
(Year(Today())-Year(Birthdate)-1) + 
((12 - Month(Birthdate)+month(Today())-1))/12,
if(And( month(Today())= month(Birthdate), Day(Today())&lt; Day(Birthdate)),
(Year(Today())- Year(Birthdate)-1) + (11/12),
(Year(Today())- Year(Birthdate)) + 
(Month(Today())-Month(Birthdate)-1)/12))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FinServ__AnnualIncome__c</fullName>
        <label>Annual Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__BillingAddress__c</fullName>
        <description>Compound field for Billing Address.</description>
        <formula>if( AND( ISPICKVAL($User.LanguageLocaleKey, &quot;ja&quot;) , NOT( ISBLANK(Account.BillingCountry )) ) , Account.BillingCountry &amp; br(), &quot;&quot; ) &amp;
            if(ISBLANK(Account.BillingStreet), &quot;&quot; , Account.BillingStreet &amp; br()) &amp;
            if(ISBLANK(Account.BillingCity), &quot;&quot; , Account.BillingCity&amp; &quot;, &quot;)&amp;
            if(ISBLANK(Account.BillingState), &quot;&quot; , Account.BillingState&amp; &quot; &quot;)&amp;
            if(ISBLANK(Account.BillingPostalCode), &quot;&quot; , Account.BillingPostalCode &amp; br()) &amp;
            if( OR( ISPICKVAL($User.LanguageLocaleKey, &quot;ja&quot;) , ISBLANK(Account.BillingCountry) ) , &quot;&quot; , Account.BillingCountry )</formula>
        <label>Billing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__Citizenship__c</fullName>
        <label>Citizenship</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__CommunicationPreferences__c</fullName>
        <label>Communication Preferences</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fraud:Phone</fullName>
                </value>
                <value>
                    <fullName>Fraud:Email</fullName>
                </value>
                <value>
                    <fullName>Fraud:SMS</fullName>
                </value>
                <value>
                    <fullName>Promotions:Phone</fullName>
                </value>
                <value>
                    <fullName>Promotions:Email</fullName>
                </value>
                <value>
                    <fullName>Promotions:SMS</fullName>
                </value>
                <value>
                    <fullName>Balance Activities:Phone</fullName>
                </value>
                <value>
                    <fullName>Balance Activities:Email</fullName>
                </value>
                <value>
                    <fullName>Balance Activities:SMS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__ContactPreference__c</fullName>
        <label>Contact Preference</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Face-to-Face</fullName>
                    <default>true</default>
                    <label>Face-to-Face</label>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Message</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__CountryOfBirth__c</fullName>
        <label>Country Of Birth</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FinServ__Countries</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__CountryOfResidence__c</fullName>
        <description>Country of residence.</description>
        <label>Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__CreatedFromLead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Created from Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__CurrentEmployer__c</fullName>
        <label>Current Employer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__CustomerTimezone__c</fullName>
        <label>Customer Timezone</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pacific/Kiritimati</fullName>
                </value>
                <value>
                    <fullName>Pacific/Enderbury</fullName>
                </value>
                <value>
                    <fullName>Pacific/Tongatapu</fullName>
                </value>
                <value>
                    <fullName>Pacific/Chatham</fullName>
                </value>
                <value>
                    <fullName>Asia/Kamchatka</fullName>
                </value>
                <value>
                    <fullName>Pacific/Auckland</fullName>
                </value>
                <value>
                    <fullName>Pacific/Fiji</fullName>
                </value>
                <value>
                    <fullName>Pacific/Norfolk</fullName>
                </value>
                <value>
                    <fullName>Pacific/Guadalcanal</fullName>
                </value>
                <value>
                    <fullName>Australia/Lord_Howe</fullName>
                </value>
                <value>
                    <fullName>Australia/Brisbane</fullName>
                </value>
                <value>
                    <fullName>Australia/Sydney</fullName>
                </value>
                <value>
                    <fullName>Australia/Adelaide</fullName>
                </value>
                <value>
                    <fullName>Australia/Darwin</fullName>
                </value>
                <value>
                    <fullName>Asia/Seoul</fullName>
                </value>
                <value>
                    <fullName>Asia/Tokyo</fullName>
                </value>
                <value>
                    <fullName>Asia/Hong_Kong</fullName>
                </value>
                <value>
                    <fullName>Asia/Kuala_Lumpur</fullName>
                </value>
                <value>
                    <fullName>Asia/Manila</fullName>
                </value>
                <value>
                    <fullName>Asia/Shanghai</fullName>
                </value>
                <value>
                    <fullName>Asia/Singapore</fullName>
                </value>
                <value>
                    <fullName>Asia/Taipei</fullName>
                </value>
                <value>
                    <fullName>Australia/Perth</fullName>
                </value>
                <value>
                    <fullName>Asia/Bangkok</fullName>
                </value>
                <value>
                    <fullName>Asia/Jakarta</fullName>
                </value>
                <value>
                    <fullName>Asia/Saigon</fullName>
                </value>
                <value>
                    <fullName>Asia/Rangoon</fullName>
                </value>
                <value>
                    <fullName>Asia/Dacca</fullName>
                </value>
                <value>
                    <fullName>Asia/Katmandu</fullName>
                </value>
                <value>
                    <fullName>Asia/Calcutta</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__EmailVerified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Verified</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>